--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,17 +1,35 @@
-<% include header.ejs %>
-<noscript>
-  <p>このページではJavaScriptを使用しています。</p>
-</noscript>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/javascripts/socket-chat.js"></script>
+    <script src="/javascripts/sanitize.js"></script>
+  </head>
+  <body>
+    <%= name %>
+    <%= room %>
+    <noscript>
+      <p>このページではJavaScriptを使用しています。</p>
+    </noscript>
+    <!-- チャットフォーム -->
+    <form onsubmit="return false;" autocomplete="off">
+      <div>
+        <input type="text" id="messageForm">
+        <input type="submit" id="sendMessageBtn" value="送信">
+        <input type="hidden" name="_csrf" value="<%= csrftoken %>">
+      </div>
+    </form>
 
-<!-- チャットフォーム -->
-<form onsubmit="return false;" autocomplete="off">
-  <div>
-    <input type="text" id="messageForm">
-    <input type="submit" id="sendMessageBtn" value="送信">
-    <input type="hidden" name="_csrf" value="<%= csrftoken %>">
-  </div>
-</form>
-
-<!-- チャット出力 -->
-<div id="messageView"></div>
-<% include footer.ejs %>
+    <script type="text/javascript">
+      $(function() {
+        $("#sendMessageBtn").click(function () {
+          send('<%= room %>', '<%= name %>');
+        });
+        chat('<%= room %>', '<%= name %>');
+      });
+    </script>
+    <!-- チャット出力 -->
+    <div id="messageView"></div>
+    <% include footer.ejs %>
